actions fix link color + resort
* move checkstep-line to actions area
* recolor Post Run actions/checkout@v2 URL (gen color too dark)

--- a/src/main.css
+++ b/src/main.css
@@ -1587,9 +1587,6 @@
   .Header-link {
     color: #c6c6c6;
   }
-  .CheckStep-line {
-    color: #afafaf;
-  }
   .issues-reset-query-icon {
     color: #181818;
     background: #949494;
@@ -2269,6 +2266,9 @@
   /* Actions */
   .CheckStep div[style*="opacity:0.5"] {
     opacity: 1 !important;
+  }
+  .CheckStep-line, .CheckStep-line .CheckStep-line-content a {
+    color: #afafaf;
   }
   .CheckStep-header-label, .CheckRun-header .btn-link:not([disabled]) .octicon,
   .CheckStep .log-line-error-next .CheckStep-line-content,
